--- a/index/templates/login_signup.html
+++ b/index/templates/login_signup.html
@@ -17,7 +17,7 @@
         <span>
           or
         </span>
-        <button class="btn btn-outline-primary login-signup-toggle" type="button" data-toggle="collapse" data-target=".login-signup-collapse" aria-expanded="false" aria-controls="login-collapse signup-collapse">
+        <button class="btn btn-dope login-signup-toggle" type="button" data-toggle="collapse" data-target=".login-signup-collapse" aria-expanded="false" aria-controls="login-collapse signup-collapse">
           Sign Up
         </button>
         <form class="login-form" method="POST" action="{% url 'account_login' %}">
@@ -32,7 +32,7 @@
               <input class="form-control" type="password" name="password" placeholder="Password" required="" id="login-password">
             </div>
             <div class="col-auto">
-              <button type="submit" class="btn btn-outline-primary">Log In</button>
+              <button type="submit" class="btn btn-dope">Log In</button>
             </div>
           </div>
           <div class="form-check">
@@ -53,7 +53,7 @@
       <div id="login-wrapper">
         <div id="signup-errors">
         </div>
-        <button class="btn btn-outline-primary login-signup-toggle" type="button" data-toggle="collapse" data-target=".login-signup-collapse" aria-expanded="false" aria-controls="login-collapse signup-collapse">
+        <button class="btn btn-dope login-signup-toggle" type="button" data-toggle="collapse" data-target=".login-signup-collapse" aria-expanded="false" aria-controls="login-collapse signup-collapse">
           Log In
         </button>
         <span>
@@ -80,7 +80,7 @@
               <input class="form-control" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
             </div>
             <div class="col-auto">
-              <button type="submit" class="btn btn-outline-primary">Sign Up</button>
+              <button type="submit" class="btn btn-dope">Sign Up</button>
             </div>
           </div>
         </form>
