--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -5,7 +5,7 @@
       <span>
         {{ episodes_info }}
       </span>
-      <button class="btn btn-outline-primary float-right" type="button" data-toggle="collapse" data-target="#episode-collapse" aria-expanded="false" aria-controls="episode-collapse">
+      <button class="btn btn-dope float-right" type="button" data-toggle="collapse" data-target="#episode-collapse" aria-expanded="false" aria-controls="episode-collapse">
         Show episodes
       </button>
     </div>
@@ -60,11 +60,11 @@
                       <input type="hidden" name="title" value="{{ episode.title }}">
                       <input type="hidden" name="date" value="{{ episode.pubDate }}">
                       <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-                      <button class="btn btn-outline-primary" type="submit">
+                      <button class="btn btn-dope" type="submit">
                         Play
                       </button>
                     </form>
-                    <a class="btn btn-outline-primary" href="{{ episode.url }}" title="Download" download>
+                    <a class="btn btn-dope" href="{{ episode.url }}" title="Download" download>
                       Download
                     </a>
                   </div>
