--- a/index/static/style.css
+++ b/index/static/style.css
@@ -149,18 +149,15 @@ body {
   background: rgba(255, 255, 255, 1);
 }
 
-.btn-outline-primary {
+.btn-dope {
   color: #000;
   background-color: #fff;
-  border-color: rgba(76,222,181,1);
-  padding: .5rem .5rem;
 }
-.btn-outline-primary.active, .btn-outline-primary:hover {
+.btn-dope.active, .btn-dope:hover {
   color: #fff;
   background-color: rgba(76,222,181,1);
-  border-color: rgba(76,222,181,1);
 }
-.btn-outline-primary:focus {
+.btn-dope.focus, .btn-dope:focus {
   box-shadow: none;
 }
 
@@ -227,22 +224,35 @@ body {
   min-height: 100vh;
 }
 
-.options-group {
-  background-color: #eee;
-}
-.options-button.active, .options-button:hover {
-  background: #ddd;
-}
 .btn {
   font-size: inherit;
 }
+.page-button {
+  width: 38px;
+  height: 38px;
+  border: none;
+  user-select: none;
+}
+
+
+.page-list {
+  list-style: none;
+  font-size: 16px;
+}
+.options {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.options-group {
+  background-color: rgba(76,222,181,1);
+}
+.options-button.active, .options-button:hover {
+  background-color: rgba(76,222,181,1);
+  color: #fff;
+}
 .options-button {
-  border: 1px solid #ddd;
   margin-right: 8px;
   margin-bottom: 8px;
-  transition: background .25s ease-in-out;
-  -moz-transition: background .25s ease-in-out;
-  -webkit-transition: background .25s ease-in-out;
 }
 #button-field {
   display: flex;
@@ -261,11 +271,18 @@ body {
 }
 #alphabet-buttons {
   background: inherit;
+  font-size: 16px;
 }
 .alphabet-button {
- padding: .5rem .8rem;
- margin-bottom: 4px;
- margin-right: 4px;
+  width: 30px;
+  height: 30px;
+  margin-bottom: 4px;
+  margin-right: 4px;
+  padding: 5px;
+  border: none;
+}
+.alphabet-button:focus {
+  box-shadow: none;
 }
 
 /* MULTI BAR */
@@ -397,21 +414,21 @@ body {
   -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
   -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
   box-shadow: rgba(0,0,0,.3) 0 1px 3px;
-  padding: 15px;
+  padding: 15px 15px 0 15px;
   height: 400px;
   background-color: #fff;
 }
 #podinfo-main {
-  padding-top: 15px;
-  padding-bottom: 0;
-  padding-left: 0;
-  max-height: 350px;
+  padding: 15px;
+  max-height: 340px;
   overflow: hidden;
-
+  margin-bottom: 10px;
 }
 #podinfo-side {
+  max-height: 340px;
   padding-top: 15px;
   padding-bottom: 0;
+  overflow: hidden;
 }
 #show-episodes {
   background-color: #888;
@@ -425,14 +442,12 @@ body {
 }
 #podinfo-side-list li {
   margin-bottom: 4px;
+  max-height: 34px;
+  overflow: hidden;
 }
 
 #podinfo-copyright {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
+
 }
 #podinfo-artist {
   overflow: hidden;
@@ -459,7 +474,6 @@ body {
 }
 
 .results-wrapper a, .results-wrapper a:hover {
-  color: #000;
   text-decoration: none;
 }
 .results-wrapper {
@@ -477,6 +491,9 @@ body {
 }
 .results-list {
   padding: 15px;
+}
+.results-list a {
+  color: #000;
 }
 .result-box {
   transition: background .25s ease-in-out;
