--- a/index/templates/multibar.html
+++ b/index/templates/multibar.html
@@ -2,7 +2,7 @@
   <div class="row">
     <!-- SEARCH BAR -->
     <div class="col">
-      <a class="btn btn-outline-primary ml-auto" id="browse-toggle" href="{% url 'browse' %}">
+      <a class="btn btn-dope ml-auto" id="browse-toggle" href="{% url 'browse' %}">
         A-Z
       </a>
     </div>
@@ -41,14 +41,14 @@
           {% for letter in alphabet %}
           {% if letter == selected_alphabet %}
           <li>
-            <label class="btn btn-outline-primary options-button alphabet-button active">
+            <label class="btn btn-dope page-button alphabet-button active">
               <input class="field-button" type="radio" name="alphabet" value="{{ letter }}" checked>
               {{ letter }}
             </label>
           </li>
           {% else %}
           <li>
-            <label class="btn btn-outline-primary options-button alphabet-button">
+            <label class="btn btn-dope page-button alphabet-button">
               <input class="field-button" type="radio" name="alphabet" value="{{ letter }}">
               {{ letter }}
             </label>
