--- a/index/templates/index/subscriptions.html
+++ b/index/templates/index/subscriptions.html
@@ -22,7 +22,7 @@ dopepod
               <img class="img-fluid" src="//images.weserv.nl/?url={{ subscription.parent.artworkUrl }}100x100bb.jpg&w=100&h=100&t=absolute" />
             </a>
           </div>
-          <div class="col pr-0">
+          <div class="col px-0">
             <h5>
               <a class="show-podinfo" data-itunesid="{{ subscription.parent.itunesid }}" href="{% url 'podinfo' itunesid=subscription.parent.itunesid %}">
                 {{ subscription.parent.title }}
