--- a/index/templates/multibar.html
+++ b/index/templates/multibar.html
@@ -2,7 +2,7 @@
   <div class="row">
     <!-- SEARCH BAR -->
     <div class="col">
-      <a class="btn btn-dope ml-auto" id="browse-toggle" href="{% url 'browse' %}">
+      <a class="btn btn-dope" id="browse-toggle" href="{% url 'browse' %}">
         A-Z
       </a>
     </div>
