--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -40,7 +40,7 @@
     <footer class="footer">
       <div class="container-fluid">
         <div class="row color" id="footer">
-          <div class="col texture">
+          <div class="col">
             © dopepod 2017
           </div>
         </div>
