--- a/index/templates/optionsbar.html
+++ b/index/templates/optionsbar.html
@@ -4,6 +4,15 @@
       <div class="btn-group" id="page-buttons" data-toggle="buttons">
         <ul class="nav page-list">
           {% if podcasts.has_previous %}
+          {% if not podcasts.previous_page_number == 1%}
+          <li>
+            <label class="btn btn-dope page-button">
+              <input class="field-button" type="radio" name="page" value="1">
+              <i class="fas fa-chevron-left"></i>
+              <i class="fas fa-chevron-left"></i>
+            </label>
+          </li>
+          {% endif %}
           <li>
             <label class="btn btn-dope page-button">
               <input class="field-button" type="radio" name="page" value="{{ podcasts.previous_page_number }}">
@@ -35,6 +44,15 @@
               <i class="fas fa-chevron-right"></i>
             </label>
           </li>
+          {% if not podcasts.next_page_number == pagecount%}
+          <li>
+            <label class="btn btn-dope page-button">
+              <input class="field-button" type="radio" name="page" value="{{ pagecount }}">
+              <i class="fas fa-chevron-right"></i>
+              <i class="fas fa-chevron-right"></i>
+            </label>
+          </li>
+          {% endif %}
           {% endif %}
         </ul>
       </div>
