--- a/index/templates/optionsbar.html
+++ b/index/templates/optionsbar.html
@@ -1,5 +1,5 @@
 <div class="row options">
-  <div class="col-auto">
+  <div class="col">
     {% if podcasts.has_other_pages %}
       <div class="btn-group" id="page-buttons" data-toggle="buttons">
         <ul class="nav page-list">
