--- a/index/templates/charts.html
+++ b/index/templates/charts.html
@@ -1,14 +1,15 @@
-<div class="col results-wrapper">
-  <div class="row color">
-    <div class="col results-bar">
-      <span class="results-info">
-        {{ chart_results_info }}
-      </span>
-    </div>
-  </div>
+<div class="col-auto color results-bar">
+  <span class="results-header">
+    {{ chart_header }}
+  </span>
+  <!-- <button class="btn btn-dope float-right" id="show-button" type="button" data-toggle="collapse" data-target="#chart-collapse" aria-expanded="false" aria-controls="chart-collapse">
+    +
+  </button> -->
+</div>
+<div class="col-12 collapse results-wrapper show" id="chart-collapse">
   <div class="row options">
-    <div class="col-auto ml-auto">
-      <a class="btn btn-dope" data-toggle="collapse" href="#chart-genre-collapse" aria-expanded="false" aria-controls="chart-genre-collapse">
+    <div class="col">
+      <a class="btn btn-dope float-right" data-toggle="collapse" href="#chart-genre-collapse" aria-expanded="false" aria-controls="chart-genre-collapse">
         Genre
       </a>
     </div>
@@ -84,7 +85,7 @@
           </div>
         </div>
         {% if not forloop.last %}
-          <hr />
+          <hr class="h-line" />
         {% endif %}
       {% empty %}
         <p>
