--- a/index/templates/index/results_detail.html
+++ b/index/templates/index/results_detail.html
@@ -5,14 +5,12 @@ dopepod
 {% endblock %}
 
 {% block results %}
-<div class="col results-wrapper">
-  <div class="row color">
-    <div class="col results-bar">
-      <span class="results-info">
-        {{ results_info }}
-      </span>
-    </div>
-  </div>
+<div class="col-auto color results-bar">
+  <span class="results-header">
+    {{ results_header }}
+  </span>header
+</div>
+<div class="col-12 results-wrapper">
   <form id="results-form" method="GET" action="{% url 'search' %}">
     <input type="hidden" id="selected_q" name="selected_q" value="{{ selected_q }}">
     {% include 'optionsbar.html' %}
