--- a/index/templates/index/results_list.html
+++ b/index/templates/index/results_list.html
@@ -6,14 +6,12 @@ dopepod
 
 {% block results %}
 {% if podcasts %}
-<div class="col results-wrapper">
-  <div class="row color">
-    <div class="col results-bar">
-      <span class="results-info">
-        {{ results_info }}
-      </span>
-    </div>
-  </div>
+<div class="col-auto color results-bar">
+  <span class="results-header">
+    {{ results_header }}
+  </span>
+</div>
+<div class="col-12 results-wrapper">
   <form id="results-form" method="GET" action="{% url 'browse' %}">
     <input type="hidden" id="selected_alphabet" name="selected_alphabet" value="{{ selected_alphabet }}">
     {% include 'optionsbar.html' %}
