--- a/index/templates/index/subscriptions.html
+++ b/index/templates/index/subscriptions.html
@@ -5,14 +5,12 @@ dopepod
 {% endblock %}
 
 {% block results %}
-<div class="col results-wrapper">
-  <div class="row color">
-    <div class="col results-bar">
-      <span>
-        {{ results_info }}
-      </span>
-    </div>
-  </div>
+<div class="col-auto color results-bar">
+  <span class="results-header">
+    {{ results_header }}
+  </span>
+</div>
+<div class="col-12 results-wrapper">
   <div class="row results-list">
     <div class="col">
       {% for subscription in subscriptions %}
@@ -45,7 +43,7 @@ dopepod
           </div>
         </div>
         {% if not forloop.last %}
-          <hr />
+          <hr class="h-line" />
         {% endif %}
       {% empty %}
         <p>
