--- a/index/templates/optionsbar.html
+++ b/index/templates/optionsbar.html
@@ -57,15 +57,13 @@
         </ul>
       </div>
     {% endif %}
-  </div>
-  <div class="col-auto ml-auto">
     {% if genres %}
-      <a class="btn btn-dope" data-parent="#options-accordion" href="#options-accordion1" aria-expanded="true" aria-controls="options-accordion1" data-toggle="collapse" href="#genre-collapse" aria-expanded="false" aria-controls="genre-collapse">
+      <a class="btn btn-dope float-right" data-parent="#options-accordion" href="#options-accordion1" aria-expanded="true" aria-controls="options-accordion1" data-toggle="collapse" href="#genre-collapse" aria-expanded="false" aria-controls="genre-collapse">
         Genre
       </a>
     {% endif %}
     {% if languages %}
-      <a class="btn btn-dope" data-parent="#options-accordion" href="#options-accordion2" aria-expanded="true" aria-controls="options-accordion2" data-toggle="collapse" href="#genre-collapse" aria-expanded="false" aria-controls="genre-collapse">
+      <a class="btn btn-dope float-right" data-parent="#options-accordion" href="#options-accordion2" aria-expanded="true" aria-controls="options-accordion2" data-toggle="collapse" href="#genre-collapse" aria-expanded="false" aria-controls="genre-collapse">
         Language
       </a>
     {% endif %}
