--- a/index/static/style.css
+++ b/index/static/style.css
@@ -160,7 +160,7 @@ body {
 
 .btn-dope {
   font-size: 16px;
-  padding: 5px 8px;
+  padding: 5px 7px;
   color: #000;
   background-color: #fff;
 }
@@ -303,7 +303,7 @@ body {
   -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
   -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
   box-shadow: rgba(0,0,0,.3) 0 1px 3px;
-  background: rgba(76,222,181,1);
+  background: rgba(76,222,181,.9);
   background: -moz-linear-gradient(left, rgba(76,222,181,.9) 0%, rgba(145,194,186,.9) 100%);
   background: -webkit-gradient(left top, right top, color-stop(0%, rgba(76,222,181,.9)), color-stop(100%, rgba(145,194,186,.9)));
   background: -webkit-linear-gradient(left, rgba(76,222,181,.9) 0%, rgba(145,194,186,.9) 100%);
@@ -531,9 +531,9 @@ body {
   max-width: 100%;
   margin-top: 15px;
   border-radius: .25rem .25rem 0 0;
-  -webkit-box-shadow: rgba(0,0,0,.5) 0 0px 2px;
-  -moz-box-shadow: rgba(0,0,0,.5) 0 0px 2px;
-  box-shadow: rgba(0,0,0,.5) 0 0px 2px;
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 0px 2px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 0px 2px;
+  box-shadow: rgba(0,0,0,.3) 0 0px 2px;
   color: #fff;
   font-size: 18px;
   text-align: center;
